--- a/index.html
+++ b/index.html
@@ -8,5 +8,25 @@
 </head>
 <body>
     
+
+  <div id="main">
+    Main
+  </div>
+
+  <div id="content" class="first">
+    <ul>
+      <li class="list">list 1</li>
+      <li>list 2</li>
+      
+    </ul>
+  </div>
+  
+
+
+
+
+
+
+
 </body>
 </html>
