--- a/CSS/style.html
+++ b/CSS/style.html
@@ -16,7 +16,9 @@
 
     <h2>ASD</h2>
     <div id="main">
-        <div id="content"></div>
+        <div id="content">
+            <button id="button"></button>
+        </div>
     </div>
 </body>
 </html>
