--- a/CSS/style.html
+++ b/CSS/style.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="../animation.js"></script>
     <style>
         h2{
             color: red;
@@ -17,7 +18,7 @@
     <h2>ASD</h2>
     <div id="main">
         <div id="content">
-            <button id="button"></button>
+            <button id="button" onclick="myMove()"></button>
         </div>
     </div>
 </body>
